--- a/css/style.css
+++ b/css/style.css
@@ -11,16 +11,17 @@ h1,h2,h3,h4,h5,h6,h7,h8 {
     text-align: center;
     padding-top: 100px;
     padding-bottom: 100px;
-    margin-bottom: 30px;
-    color: #fff;
-    background: #11998e;
-    background: -moz-linear-gradient(-45deg, #11998e 0%, #38ef7d 100%);
-    background: -webkit-linear-gradient(-45deg, #11998e 0%,#38ef7d 100%);
-    background: linear-gradient(135deg, #11998e 0%,#38ef7d 100%);
+    margin-bottom: 50px;
+    color: #296073;
+background: #0CFEEA;
+background: -webkit-linear-gradient(top, #0CFEEA, #D9E2EB);
+background: -moz-linear-gradient(top, #0CFEEA, #D9E2EB);
+background: linear-gradient(to bottom, #0CFEEA, #D9E2EB);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#11998e', endColorstr='#38ef7d',GradientType=1 );
 }
 .header p {
-    color: rgba(255,255,255,0.8);
+    color:#296073;
+	font-weight:600;
 }
 .body-site {
     padding: 30px !important;
